<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/deleteNoteDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_rectangle"
    android:backgroundTint="@color/defaultBackgroundColor">

    <ImageView
        android:id="@+id/removeIcon"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete_24"
        app:tint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_note"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:includeFontPadding="false"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/removeIcon"
        app:layout_constraintTop_toTopOf="@+id/removeIcon"
        app:layout_constraintBottom_toBottomOf="@+id/removeIcon"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/removeIcon"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"/>

    <Button
        android:id="@+id/btnDelete"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/delete"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/delete"
        android:backgroundTint="@color/defaultBackgroundColor"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnCancel"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/defaultBackgroundColor"
        app:layout_constraintTop_toBottomOf="@+id/message"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintTop_toTopOf="@+id/btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>