<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addURLDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_rectangle">
    
    <ImageView
        android:id="@+id/imgAddURL"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_language_24"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/add_url"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAddURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAddURL"
        app:layout_constraintTop_toTopOf="@+id/imgAddURL"/>
    
    <EditText
        android:id="@+id/inputURL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/imgAddURL"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_url_here"
        android:background="@null"
        android:textColor="@color/white"
        android:textColorHint="@color/textHint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp" />

    <Button
        android:id="@+id/btnAdd"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/add"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/defaultBackgroundColor"
        app:layout_constraintTop_toBottomOf="@+id/inputURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btnCancel"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:padding="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/cancel"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        android:backgroundTint="@color/defaultBackgroundColor"
        app:layout_constraintTop_toBottomOf="@+id/inputURL"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>