<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createNoteLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.activities.CreateNoteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/background_toolbar"
            android:orientation="horizontal"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@id/imgBack"
                app:layout_constraintEnd_toStartOf="@id/imgSave"
                app:layout_constraintStart_toEndOf="@id/imgBack"
                app:layout_constraintTop_toTopOf="@id/imgBack">

                <ImageView
                    android:id="@+id/icBoldText"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:onClick="onBoldTextIconClicked"
                    android:src="@drawable/ic_format_bold_24"
                    app:tint="@color/icon"
                    android:contentDescription="@string/bold_text_icon"/>

                <ImageView
                    android:id="@+id/icItalic"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:onClick="onItalicTextIconClicked"
                    android:src="@drawable/ic_format_italic_24"
                    app:tint="@color/icon"
                    android:contentDescription="@string/italic_text_icon"/>

                <ImageView
                    android:id="@+id/icUnderlined"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:onClick="onUnderlinedTextIconClicked"
                    android:src="@drawable/ic_format_underlined_24"
                    app:tint="@color/icon"
                    android:contentDescription="@string/underline_icon"/>

                <ImageView
                    android:id="@+id/icStrikethrough"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:onClick="onStrikethroughIconClicked"
                    android:src="@drawable/ic_format_strikethrough_24"
                    app:tint="@color/icon"
                    android:contentDescription="@string/strikethrough_icon"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imgSave"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/save_button"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_check_24"
                app:layout_constraintBottom_toBottomOf="@id/imgBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgBack"
                app:tint="@color/icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <EditText
                    android:id="@+id/noteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:hint="@string/note_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textCapSentences"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textHint"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textDateTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/icon"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="@id/noteTitle"
                    app:layout_constraintStart_toStartOf="@id/noteTitle"
                    app:layout_constraintTop_toBottomOf="@id/noteTitle" />

                <EditText
                    android:id="@+id/noteSubtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@null"
                    android:hint="@string/note_subtitle"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine|textCapSentences"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:textColor="@color/textSubtitle"
                    android:textColorHint="@color/textHint"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/viewSubtitle"
                    app:layout_constraintTop_toBottomOf="@id/textDateTime" />

                <View
                    android:id="@+id/viewSubtitle"
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:background="@drawable/background_note_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/noteSubtitle" />

                <ImageView
                    android:id="@+id/noteImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/noteSubtitle" />

                <ImageView
                    android:id="@+id/removeImage"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/background_delete_icon"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete_24"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/noteImage"
                    app:layout_constraintTop_toTopOf="@id/noteImage"
                    app:tint="@color/white" />

                <LinearLayout
                    android:id="@+id/layoutURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@+id/noteImage"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/mainURL"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoLink="web"
                        android:includeFontPadding="false"
                        android:textColorLink="@color/colorAccent"
                        android:textSize="@dimen/_13ssp" />

                    <ImageView
                        android:id="@+id/removeURL"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_delete_24"
                        app:tint="@color/delete" />

                </LinearLayout>

                <EditText
                    android:id="@+id/noteContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/type_your_note"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine|textCapSentences"
                    android:minHeight="@dimen/_400sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/textHint"
                    android:textColorLink="#9797EC"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/layoutURL" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <include layout="@layout/note_options" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>